--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html>
   <body>
-    <h1>Hello World</h1>
-    <div id="app" class="app-root"></div>
+    <h1>D3 Charts Demo App</h1>
+    <div id="app" class="app-root">
+      <div class="docs" id="docs"><a href="./types/index.html">Docs</a></div>
+      <div class="charts" id="charts"></div>
+    </div>
   </body>
 </html>
