--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,10 @@
 <html>
   <body>
-    <h1>D3 Charts Demo App</h1>
     <div id="app" class="app-root">
-      <div class="docs" id="docs"><a href="./types/index.html">Docs</a></div>
+      <div class="title">
+        <h1>D3 Charts</h1>
+        <h2 class="docs" id="docs"><a href="./types/index.html">Docs</a></h2>
+      </div>
       <div class="charts" id="charts"></div>
     </div>
   </body>
